<resources>
    <string name="app_name">Ehsan</string>
    <string name="main_page_sign_in_button">تسجيل دخول</string>
    <string name="main_page_sign_up_button">حساب جديد</string>
    <string name="sign_in_page_title_text_view">تسجيل الدخول</string>
    <string name="email">البريد الإلكترونى</string>
    <string name="password">كلمة المرور</string>
    <string name="sign_in_page_remember_me_check_box">تذكرنى</string>
    <string name="forget_password">نسيت كلمة المرور ؟</string>
    <string name="register">التسجيل</string>
    <string name="sign_up_activity_donor_fragment">التسجيل كمتبرع</string>
    <string name="sign_up_activity_association_fragment">التسجيل كجمعية خيرية</string>
    <string name="donar_name">اسم المتبرع</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="association_name">اسم الجمعية</string>
    <string name="conditions">الشروط والاحكام وسياسة الخصوصية</string>
    <string name="authorization_number">رقم التصريح</string>
    <string name="authorization_number_image">الرجاء اختيار صورة تصريح الجمعية من هاتفك....</string>
    <string name="financial_donation_sms_fragment">الرسائل القصيره</string>
    <string name="financial_donation_bank_fragment">الحسابات البنكية</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sms_service_header_textview">خدمة دعم الجمعية من خلال الرسائل القصرة SMS</string>
    <string name="sms_service_number_textview">5052</string>
    <string name="sms_service_donate_button">تبرع</string>
    <string name="bank_account_name_textview">بنك ساب</string>
    <string name="bank_account_number_textview">sa75 8000 0243 0013 6139 0000 0100</string>
    <string name="donor_home_page_categ1_textview">تبرع بالمال</string>
    <string name="donor_home_page_categ2_textview">تبرع بالملابس</string>
    <string name="donor_home_page_categ3_textview">تبرع بالطعام</string>
    <string name="donor_home_page_categ4_textview">تبرع بالاجهزه المنزلية</string>
    <string name="donor_home_page_categ5_textview">تبرع بالادوات المدرسية</string>
    <string name="nav_drawer_item_user_profile">الصفحة الشخصية</string>
    <string name="nav_drawer_item_my_donotaion">قائمة تبرعاتى</string>
    <string name="nav_drawer_item_about_us">عن التطبيق</string>
    <string name="nav_drawer_item_settings">الاعدادات</string>
    <string name="profile_page_user_name">الاسم:</string>
    <string name="profile_page_email">البريد الالكترونى</string>
    <string name="profile_page_phone_number">رقم الهاتف</string>
    <string name="clothes_man">رجال</string>
    <string name="clothes_woman">نساء</string>
    <string name="clothes_kid">اطفال</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="financial_donation_association_name">جمعية احسان الخيريه - فرع الرياض</string>
    <string name="fragment_clothes_woman_checkbox1">قميص</string>
    <string name="fragment_clothes_woman_checkbox2">بنطال</string>
    <string name="fragment_clothes_woman_checkbox3">تنوره</string>
    <string name="fragment_clothes_woman_checkbox4">جوارب</string>
    <string name="fragment_clothes_woman_checkbox5">عباءه</string>
    <string name="fragment_clothes_woman_checkbox6">اخرى</string>
    <string name="fragment_clothes_woman_button">تبرع</string>
    <string name="financial_donation_association_description_textview">جمعية احسان الخيريه بالرياض تهدف الى ترسيخ مبدا التكافل الاجتماعى بين افراد المجتمع وتحويله الى واقع عملى</string>
    <string name="nav_drawer_item_logout">Log Out</string>
    <string name="sign_up_donor_address">العنوان</string>
    <string name="sign_up_donor_phone_number">رقم الهاتف</string>


</resources>
