<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context="com.e.k.m.a.ehsan.authentication.signup.SecondFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_groceries"
                android:layout_gravity="center"
                />
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/association_name"
                android:id="@+id/sign_up_association_name"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                />
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/sign_up_association_email"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                />
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/sign_up_association_password"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                />
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:id="@+id/sign_up_association_password_confirm"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                />
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/authorization_number"
                android:id="@+id/sign_up_association_authorization_number"
                android:layout_margin="8dp"
                android:inputType="number"
                android:drawableLeft="@drawable/ic_card_membership_black_24dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authorization_number_image"
                android:textSize="16sp"
                />
            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:textStyle="bold"
                android:textSize="15sp"
                app:srcCompat="@drawable/ic_file_upload_black_24dp"
                android:id="@+id/authorization_number_image"
                android:background="@drawable/sign_up_association_upload"
                android:layout_margin="8dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layoutDirection="rtl"
                android:layout_margin="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="انضمامك يعنى موافقتك على جميع"
                    android:layout_margin="8dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conditions"
                    android:layout_margin="8dp"
                    android:id="@+id/association_condition"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/sign_up_association_regiter"
                android:background="@drawable/sign_up_association_regiter"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="getAccess1"
                tools:ignore="OnClick" />
        </LinearLayout>
    </ScrollView>
