<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context="com.e.k.m.a.ehsan.authentication.signup.OneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_groceries"
            android:layout_gravity="center"
            />
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/donar_name"
            android:id="@+id/sign_up_donor_user_name"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            />
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/sign_up_donor_email"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            />
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/sign_up_donor_password"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            />
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:id="@+id/sign_up_donor_password_confirm"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:layout_margin="8dp"
            >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="انضمامك يعنى موافقتك على جميع"
             android:layout_margin="8dp"
             />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conditions"
                android:layout_margin="8dp"
                android:id="@+id/donor_condition"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="15sp"
            android:background="@drawable/sign_up_association_regiter"
            android:id="@+id/sign_up_donor_regiter"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:onClick="getAccess"
            tools:ignore="OnClick" />
    </LinearLayout>

</ScrollView>
