<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/design_drawer_layout"
    >



    <include layout="@layout/activity_donor_home_page"/>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/home_nav_navigation_view"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_groceries"
                android:padding="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_drawer_item_user_profile"
                android:id="@+id/nav_drawer_item_user_profile"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:padding="24dp"
                android:onClick="openProfile"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_drawer_item_my_donotaion"
                android:id="@+id/nav_drawer_item_my_donotaion"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:padding="24dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_drawer_item_about_us"
                android:id="@+id/nav_drawer_item_about_us"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:padding="24dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_drawer_item_settings"
                android:id="@+id/nav_drawer_item_settings"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:padding="24dp"
                />
        </LinearLayout>

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>