<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context="com.e.k.m.a.ehsan.authentication.mainpage.MainPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:gravity="center"
        android:layout_above="@id/main_page_image_view"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/main_page_image_view"
        app:srcCompat="@drawable/ic_groceries"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_page_buttons_pattern"
            android:text="@string/main_page_sign_in_button"
            android:onClick="signInPage"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_page_buttons_pattern"
            android:text="@string/main_page_sign_up_button"
            android:onClick="signUpPage"
            />
    </LinearLayout>

</RelativeLayout>
