<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    tools:context="com.e.k.m.a.ehsan.donor.Profile">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_person_add_black_24dp"
        android:id="@+id/profile_page_imageview"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_user_name"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:padding="24dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="احمد محمد"
        android:id="@+id/profile_page_user_name"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textColor="@android:color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_email"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:padding="24dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ahmedmohamed@gmail.com"
        android:id="@+id/profile_page_email"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textColor="@android:color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_phone_number"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:padding="24dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="123456789"
        android:id="@+id/profile_page_phone_number"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textColor="@android:color/black"
        />
</LinearLayout>
