<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/design_drawer_layout"
    >



    <include layout="@layout/activity_donor_home_page"/>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/home_nav_navigation_view"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:srcCompat="@drawable/ic_groceries"
                    android:layout_weight="1"
                    android:id="@+id/home_page_nav_userimage_textview"
                    android:layout_margin="8dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ahmed Mohamed"
                        android:layout_margin="8dp"
                        android:textColor="@android:color/white"
                        android:id="@+id/home_page_nav_username_textview"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ahmedmohamed@gmail.com"
                        android:layout_margin="8dp"
                        android:textColor="@android:color/white"
                        android:id="@+id/home_page_nav_useremail_textview"
                        />
                </LinearLayout>
            </LinearLayout>
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_drawer_item_user_profile"
                android:id="@+id/nav_drawer_item_user_profile"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:layout_margin="8dp"
                android:background="@drawable/main_page_buttons_pattern"
                android:onClick="openProfile"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_drawer_item_my_donotaion"
                android:id="@+id/nav_drawer_item_my_donotaion"
                android:textColor="@color/colorPrimary"
                android:onClick="openMyDonotion"
                android:background="@drawable/main_page_buttons_pattern"
                android:textSize="15dp"
                android:layout_margin="8dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_drawer_item_about_us"
                android:id="@+id/nav_drawer_item_about_us"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/main_page_buttons_pattern"
                android:textSize="15dp"
                android:onClick="aboutUs"
                android:layout_margin="8dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_drawer_item_logout"
                android:id="@+id/nav_drawer_item_logout"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/main_page_buttons_pattern"
                android:textSize="15dp"
                android:onClick="aboutUs"
                android:layout_margin="8dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_drawer_item_settings"
                android:id="@+id/nav_drawer_item_settings"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/main_page_buttons_pattern"
                android:textSize="15dp"
                android:layout_margin="8dp"
                android:onClick="openSettings"
                />
        </LinearLayout>

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>